# 11SevenDomeAPI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  setup.cfg
application/: __init__.py  config.py
application/shared/: databases.py
scripts/: prestart.sh
