[tool.poetry]
name = "FasterPortfolioAPI"
version = "0.1.0"
description = ""
authors = ["ThaRising <kochbe.ber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
fastapi-utils = "^0.2.1"
databases = {extras = ["sqlite"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.5"
black = "^19.10b0"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
isort = "^4.3.21"
autoflake = "^1.3.1"

[tool.black]
line-length = 88
target_version = ["py38"]
include = '\.pyi?$'

[tool.isort]
line-length = 88
known_first_party = ["application", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
